update index page

--- a/index.mdx
+++ b/index.mdx
@@ -1,103 +1,113 @@
 ---
-title: "Introduction"
-description: "Welcome to the new home for your documentation"
+title: Introduction
 ---
 
-## Setting up
+Welcome to the FossaPay API documentation.
 
-Get your documentation site up and running in minutes.
+FossaPay is a payment infrastructure built for neobanks, fintechs, and businesses that need to move money quickly and safely. Through a single API, you can issue virtual accounts, manage wallets, automate payouts, and settle funds in fiat or stablecoins.
 
-<Card
-  color="#0080FF"
-  title="Start here"
-  icon="rocket"
-  href="/quickstart"
-  horizontal
->
-  Follow our three step quickstart guide.
-</Card>
+This documentation explains how FossaPay works, what you can build with it, and how to get started from your first API call to live transactions.
 
-## Make it yours
+### What is FossaPay?
 
-Design a docs site that looks great and empowers your users.
+FossaPay is a unified payment and wallet infrastructure that helps products launch and scale faster.
 
-<Columns cols={2}>
-  <Card
-    color="#0080FF"
-    title="Edit locally"
-    icon="pen-to-square"
-    href="/development"
+With FossaPay, you can:
+- Create and assign fiat virtual accounts on demand
+- Accept bank transfers and wallet payments
+- Hold and manage balances in NGN and stablecoins
+- Automate payouts and settlements
+- Track transactions in real time
+- Receive instant webhook events
+- Run KYC and compliance flows
+
+### Why Choose FossaPay?
+
+<CardGroup cols={2}>
+  <Card color="#0080FF"
+    title="Launch in 2 months"
+    icon="rocket"
   >
-    Edit your docs locally and preview them in real time.
+    Go live very fast. No heavy setup or compliance headaches.
   </Card>
-  <Card
-    color="#0080FF"
-    title="Customize your site"
-    icon="palette"
-    href="/essentials/settings"
-  >
-    Customize the design and colors of your site to match your brand.
-  </Card>
-  <Card
-    color="#0080FF"
-    title="Set up navigation"
-    icon="map"
-    href="/essentials/navigation"
-  >
-    Organize your docs to help users find what they need and succeed with your
-    product.
-  </Card>
-  <Card
-    color="#0080FF"
-    title="API documentation"
-    icon="terminal"
-    href="/api-reference/introduction"
-  >
-    Auto-generate API documentation from OpenAPI specifications.
-  </Card>
-</Columns>
-
-## Create beautiful pages
-
-Everything you need to create world-class documentation.
-
-<Columns cols={2}>
-  <Card
-    color="#0080FF"
-    title="Write with MDX"
-    icon="pen-fancy"
-    href="/essentials/markdown"
-  >
-    Use MDX to style your docs pages.
-  </Card>
-  <Card
-    color="#0080FF"
-    title="Code samples"
+  <Card color="#0080FF"
+    title="Single API"
     icon="code"
-    href="/essentials/code"
   >
-    Add sample code to demonstrate how to use your product.
+    Everything you need through one unified API - from collections to payouts.
   </Card>
-  <Card color="#0080FF" title="Images" icon="image" href="/essentials/images">
-    Display images and other media.
-  </Card>
-  <Card
-    color="#0080FF"
-    title="Reusable snippets"
-    icon="recycle"
-    href="/essentials/reusable-snippets"
+  <Card color="#0080FF"
+    title="Real-time Operations"
+    icon="bolt"
   >
-    Write once and reuse across your docs.
+    Instant webhooks, real-time reconciliation, and immediate settlements.
   </Card>
-</Columns>
+  <Card color="#0080FF"
+    title="Bank-grade Security"
+    icon="shield-check"
+  >
+    99.9% uptime with enterprise-level security and encryption.
+  </Card>
+</CardGroup>
 
-## Need inspiration?
+### Built for Neobanks and Fintechs
 
-<Card
-  color="#0080FF"
-  title="See complete examples"
-  icon="stars"
-  href="https://mintlify.com/customers"
->
-  Browse our showcase of exceptional documentation sites.
-</Card>
+Whether you're building a digital bank, a payment platform, or a fintech product, FossaPay provides the foundation you need:
+
+- **Neobanks** - Launch your own branded banking platform
+- **Lending Platforms** - Manage disbursements and collections
+- **Payment Processors** - Handle high-volume transactions
+- **Crypto Platforms** - Bridge fiat and stablecoins seamlessly
+- **Marketplaces** - Split payments and manage seller payouts
+
+### Getting Started
+
+<CardGroup cols={2}>
+  <Card color="#0080FF"
+    title="Quickstart"
+    icon="play"
+    href="/quickstart"
+  >
+    Get up and running in minutes with our quickstart guide
+  </Card>
+  <Card color="#0080FF"
+    title="API Reference"
+    icon="code"
+    href="/api-reference"
+  >
+    Explore our comprehensive API documentation
+  </Card>
+  <Card color="#0080FF"
+    title="White-Label Solution"
+    icon="building"
+    href="/white-label/overview"
+  >
+    Learn about our white-label neobank solution
+  </Card>
+</CardGroup>
+
+## Core Features
+
+### Collections API
+Accept payments through fiat wallets with instant webhook notifications on every transaction.
+
+### Payouts API
+Send funds to any Nigerian bank account in seconds. Support for single and bulk disbursements with automated processing.
+
+### Wallet Infrastructure
+Create customer wallets, hold balances in NGN and stablecoins, and manage ledgers with ease.
+
+### Compliance & Security
+KYC-ready, PCI-DSS compliant, and built for high availability with 99.9% uptime guarantee.
+
+## Support
+
+Need help? We're here for you:
+
+- **Email**: support@fossapay.com
+- **Documentation**: You're already here!
+- **Dashboard**: [dashboard.fossapay.com](https://dashboard.fossapay.com)
+
+<Note>
+  Ready to get started? [Get API Access](https://dashboard.fossapay.com/signup) and go live in 2 weeks.
+</Note>
