--- a/api-reference/fiat-transfers/inter-bank-transfer.mdx
+++ b/api-reference/fiat-transfers/inter-bank-transfer.mdx
@@ -61,16 +61,25 @@ curl -X POST https://api-staging.fossapay.com/api/v1/transfers/fiat/inter-bank \
 ```
 
 ```javascript
-const transfer = await client.fiatTransfers.interBankTransfer({
-  customerId: '550e8400-e29b-41d4-a716-446655440000',
-  destinationBankCode: '044',
-  destinationAccountName: 'JOHN DOE',
-  destinationAccountNumber: '1234567890',
-  destinationBankName: 'ACCESS BANK',
-  reference: 'TRF-2024-001',
-  remarks: 'Salary payment',
-  amount: 50000.00
+const response = await fetch('https://api-staging.fossapay.com/api/v1/transfers/fiat/inter-bank', {
+  method: 'POST',
+  headers: {
+    'x-api-key': 'YOUR_API_KEY',
+    'Content-Type': 'application/json'
+  },
+  body: JSON.stringify({
+    customerId: '550e8400-e29b-41d4-a716-446655440000',
+    destinationBankCode: '044',
+    destinationAccountName: 'JOHN DOE',
+    destinationAccountNumber: '1234567890',
+    destinationBankName: 'ACCESS BANK',
+    reference: 'TRF-2024-001',
+    remarks: 'Salary payment',
+    amount: 50000.00
+  })
 });
+
+const data = await response.json();
 ```
 
 ## Response
