--- a/api-reference/virtual-account/wallet-transactions.mdx
+++ b/api-reference/virtual-account/wallet-transactions.mdx
@@ -46,24 +46,32 @@ curl "https://api-staging.fossapay.com/api/v1/wallets/fiat/wal_abc123xyz/transac
 ```
 
 ```javascript
-const transactions = await client.wallets.getTransactions('wal_abc123xyz', {
-  page: 1,
-  limit: 10,
-  transactionType: 'deposit',
-  startDate: '2024-01-01',
-  endDate: '2024-01-31'
+const response = await fetch('https://api-staging.fossapay.com/api/v1/wallets/fiat/wal_abc123xyz/transactions?page=1&limit=10&transactionType=deposit&startDate=2024-01-01&endDate=2024-01-31', {
+  headers: {
+    'x-api-key': 'fp_live_sk_xxxxxxxx'
+  }
 });
+
+const data = await response.json();
+const transactions = data.transactions;
 ```
 
 ```python
-transactions = client.wallets.get_transactions(
-    wallet_id='wal_abc123xyz',
-    page=1,
-    limit=10,
-    transaction_type='deposit',
-    start_date='2024-01-01',
-    end_date='2024-01-31'
-)
+import requests
+
+url = "https://api-staging.fossapay.com/api/v1/wallets/fiat/wal_abc123xyz/transactions"
+params = {
+    "page": 1,
+    "limit": 10,
+    "transactionType": "deposit",
+    "startDate": "2024-01-01",
+    "endDate": "2024-01-31"
+}
+headers = {"x-api-key": "fp_live_sk_xxxxxxxx"}
+
+response = requests.get(url, headers=headers, params=params)
+data = response.json()
+transactions = data["transactions"]
 ```
 
 ## Response
@@ -229,14 +237,16 @@ let page = 1;
 let allTransactions = [];
 
 while (true) {
-  const response = await client.wallets.getTransactions('wal_abc123xyz', {
-    page: page,
-    limit: 50
+  const response = await fetch(`https://api-staging.fossapay.com/api/v1/wallets/fiat/wal_abc123xyz/transactions?page=${page}&limit=50`, {
+    headers: {
+      'x-api-key': 'fp_live_sk_xxxxxxxx'
+    }
   });
 
-  allTransactions.push(...response.transactions);
+  const data = await response.json();
+  allTransactions.push(...data.transactions);
 
-  if (page >= response.totalPages) {
+  if (page >= data.totalPages) {
     break;
   }
 
