--- a/concepts/wallets.mdx
+++ b/concepts/wallets.mdx
@@ -97,20 +97,6 @@ app.post('/webhooks/fossapay', (req, res) => {
 });
 ```
 
-**Manual Credit:**
-```javascript
-await fossapay.wallets.credit({
-  wallet_id: 'wal_xyz789',
-  amount: 50000,
-  currency: 'NGN',
-  reference: 'admin-credit-001',
-  narration: 'Promotional credit',
-  metadata: {
-    admin_id: 'admin_123',
-    reason: 'promotion'
-  }
-});
-```
 
 ### Debiting Wallets (Removing Money)
 
@@ -138,34 +124,28 @@ curl -X POST https://api-staging.fossapay.com/api/v1/transfers/fiat/inter-bank \
   }'
 ```
 
-**For Fees:**
-```javascript
-await fossapay.wallets.debit({
-  wallet_id: 'wal_customer',
-  amount: 100,
-  currency: 'NGN',
-  reference: 'fee-txn-001',
-  narration: 'Transaction fee'
-});
-```
 
 ### Wallet-to-Wallet Transfers
 
 Transfer funds between wallets instantly:
 
 ```javascript
-await fossapay.wallets.transfer({
-  from_wallet_id: 'wal_sender',
-  to_wallet_id: 'wal_receiver',
-  amount: 10000,
-  currency: 'NGN',
-  reference: 'p2p-transfer-001',
-  narration: 'Payment for services',
-  metadata: {
-    sender_name: 'John Doe',
-    receiver_name: 'Jane Smith'
-  }
+const response = await fetch('https://api-staging.fossapay.com/api/v1/wallets/fiat/transfers/wallet-to-wallet', {
+  method: 'POST',
+  headers: {
+    'x-api-key': 'YOUR_API_KEY',
+    'Content-Type': 'application/json'
+  },
+  body: JSON.stringify({
+    fromAccount: '1234567890', // sender's account number
+    toAccount: '0987654321',   // receiver's account number
+    amount: 10000,
+    reference: 'p2p-transfer-001',
+    narration: 'Payment for services'
+  })
 });
+
+const data = await response.json();
 ```
 
 <Note>
@@ -177,18 +157,20 @@ await fossapay.wallets.transfer({
 Check wallet balance in real-time:
 
 ```javascript
-const balance = await fossapay.wallets.getBalance({
-  wallet_id: 'wal_xyz789',
-  currency: 'NGN'
+const response = await fetch('https://api-staging.fossapay.com/api/v1/wallets/fiat/wal_xyz789', {
+  headers: {
+    'x-api-key': 'YOUR_API_KEY'
+  }
 });
+
+const data = await response.json();
+const balance = data.data;
 
 console.log(balance);
 // {
-//   "wallet_id": "wal_xyz789",
-//   "currency": "NGN",
-//   "available_balance": 150000,
-//   "ledger_balance": 150000,
-//   "pending_balance": 0
+//   "id": "wal_xyz789",
+//   "availableBalance": "150000.00",
+//   "ledgerBalance": "150000.00"
 // }
 ```
 
@@ -212,14 +194,14 @@ Ledger Balance = Available Balance + Pending Balance
 Retrieve wallet transaction history:
 
 ```javascript
-const transactions = await fossapay.wallets.getTransactions({
-  wallet_id: 'wal_xyz789',
-  currency: 'NGN',
-  start_date: '2024-01-01',
-  end_date: '2024-01-31',
-  limit: 50,
-  offset: 0
+const response = await fetch('https://api-staging.fossapay.com/api/v1/wallets/fiat/wal_xyz789/transactions?startDate=2024-01-01&endDate=2024-01-31&limit=50&page=1', {
+  headers: {
+    'x-api-key': 'YOUR_API_KEY'
+  }
 });
+
+const data = await response.json();
+const transactions = data.transactions;
 ```
 
 **Response:**
@@ -257,45 +239,7 @@ const transactions = await fossapay.wallets.getTransactions({
 }
 ```
 
-## Wallet Freezing
 
-Freeze wallets to prevent transactions:
-
-```javascript
-// Freeze wallet
-await fossapay.wallets.freeze({
-  wallet_id: 'wal_xyz789',
-  reason: 'Suspicious activity detected'
-});
-
-// Unfreeze wallet
-await fossapay.wallets.unfreeze({
-  wallet_id: 'wal_xyz789',
-  reason: 'Investigation complete'
-});
-```
-
-<Warning>
-  Frozen wallets cannot send or receive funds until unfrozen.
-</Warning>
-
-## Currency Conversion
-
-Convert between currencies within wallets:
-
-```javascript
-await fossapay.wallets.convert({
-  wallet_id: 'wal_xyz789',
-  from_currency: 'NGN',
-  to_currency: 'USDT',
-  amount: 100000,
-  reference: 'conversion-001'
-});
-```
-
-<Info>
-  Conversion rates are based on real-time market rates with a small spread.
-</Info>
 
 ## Wallet Limits
 
@@ -321,12 +265,16 @@ await fossapay.wallets.convert({
   <Accordion title="Check Balance Before Debit">
     Verify sufficient balance before attempting to debit:
     ```javascript
-    const balance = await fossapay.wallets.getBalance({
-      wallet_id: walletId,
-      currency: 'NGN'
+    const response = await fetch(`https://api-staging.fossapay.com/api/v1/wallets/fiat/${walletId}`, {
+      headers: {
+        'x-api-key': 'YOUR_API_KEY'
+      }
     });
 
-    if (balance.available_balance >= amount) {
+    const data = await response.json();
+    const balance = data.data;
+
+    if (parseFloat(balance.availableBalance) >= amount) {
       // Proceed with debit
     }
     ```
@@ -338,10 +286,8 @@ await fossapay.wallets.convert({
 
   <Accordion title="Implement Webhooks">
     Listen to wallet webhooks for real-time updates:
-    - `wallet.credited`
-    - `wallet.debited`
-    - `wallet.frozen`
-    - `wallet.unfrozen`
+    - `transfer.completed`
+    - `withdrawal.completed`
   </Accordion>
 </AccordionGroup>
 
@@ -361,37 +307,36 @@ curl -X POST https://api-staging.fossapay.com/api/v1/wallets/fiat/create \
 
 // The wallet account number can be used for collections
 ```
-
 ### Marketplace Split Payments
+
 ```javascript
-// Receive payment
+// Receive payment via webhook
 const payment = event.data; // from webhook
 
-// Credit merchant (80%)
-await fossapay.wallets.credit({
-  wallet_id: merchantWalletId,
-  amount: payment.amount * 0.8,
-  currency: 'NGN'
-});
-
-// Credit platform fee (20%)
-await fossapay.wallets.credit({
-  wallet_id: platformWalletId,
-  amount: payment.amount * 0.2,
-  currency: 'NGN'
-});
+// Split payment logic (crediting is handled via webhooks or internal processes)
+// Merchant receives 80%, platform receives 20%
+// Wallets are credited automatically based on webhook configuration
 ```
-
 ### Peer-to-Peer Transfers
+
 ```javascript
 // User sends money to another user
-await fossapay.wallets.transfer({
-  from_wallet_id: senderWalletId,
-  to_wallet_id: receiverWalletId,
-  amount: 5000,
-  currency: 'NGN',
-  narration: 'Payment from friend'
+const response = await fetch('https://api-staging.fossapay.com/api/v1/wallets/fiat/transfers/wallet-to-wallet', {
+  method: 'POST',
+  headers: {
+    'x-api-key': 'YOUR_API_KEY',
+    'Content-Type': 'application/json'
+  },
+  body: JSON.stringify({
+    fromAccount: senderAccountNumber, // sender's account number
+    toAccount: receiverAccountNumber,   // receiver's account number
+    amount: 5000,
+    reference: 'p2p-' + Date.now(),
+    narration: 'Payment from friend'
+  })
 });
+
+const data = await response.json();
 ```
 
 ## Next Steps
