update dashboard registration link

--- a/index.mdx
+++ b/index.mdx
@@ -109,5 +109,5 @@ Need help? We're here for you:
 - **Dashboard**: [dashboard.fossapay.com](https://dashboard.fossapay.com)
 
 <Note>
-  Ready to get started? [Get API Access](https://dashboard.fossapay.com/signup) and go live in 2 weeks.
+  Ready to get started? [Get API Access](https://dashboard.fossapay.com/register) and go live in 2 weeks.
 </Note>
