--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -10,7 +10,7 @@ This quickstart guide will have you making your first API call in minutes. We'll
 ## Prerequisites
 
 Before you begin, make sure you have:
-- A FossaPay account ([Sign up here](https://dashboard.fossapay.com/signup))
+- A FossaPay account ([Sign up here](https://dashboard.fossapay.com/register))
 - Your API keys from the [dashboard](https://dashboard.fossapay.com/settings/settings?tab=api-keys)
 - Node.js installed (or your preferred programming language)
 
@@ -18,7 +18,7 @@ Before you begin, make sure you have:
 
 <Steps>
   <Step title="Sign up">
-    Create an account at [dashboard.fossapay.com](https://dashboard.fossapay.com/signup)
+    Create an account at [dashboard.fossapay.com](https://dashboard.fossapay.com/register)
   </Step>
   <Step title="Get Test Keys">
     Navigate to **Settings** → **API Keys** and copy your test secret key (starts with `fp_test_sk_`)
